# predict_weather

./: .env.example  .gitignore  README.md  package.json  pyproject.toml  requirements.txt  vercel.json
api/: app.py  mongo-test.js  mongo-test.py
app/: streamlit_app.py
config/: models.yaml  stations.yaml  storage.yaml  targets.yaml
docs/: deployment.md
scripts/: backtest.py  bootstrap_ground_truth.py  bootstrap_historical_features.py  check_storage_connections.py  housekeeping.py  train_all.py
src/wt/: __init__.py  config.py
src/wt/dashboard/: __init__.py  data.py
src/wt/features/: __init__.py  build_live.py  build_train.py  transforms.py
src/wt/io/: __init__.py  asos.py  cf6.py  ghcnd.py  kalshi.py  nwp_herbie.py  nwp_openmeteo.py  nws_api.py  polymarket.py
src/wt/markets/: __init__.py  buckets.py  ev.py  signals.py
src/wt/models/: __init__.py  calibration.py  predict.py  registry.py  train.py
src/wt/ops/: __init__.py  housekeeping.py  monitoring.py
src/wt/orchestration/: __init__.py  backfill.py  cron_evening.py  cron_morning.py
src/wt/storage/: __init__.py  mongodb.py  motherduck.py  supabase.py
src/wt/utils/: logging.py  paths.py  time.py
tests/: test_buckets.py  test_build_live.py  test_cf6.py  test_dashboard_data.py  test_ev.py  test_features.py  test_ghcnd.py  test_housekeeping.py  test_mongo_endpoint.py  test_mongodb.py  test_monitoring.py  test_nwp_herbie.py  test_predict.py  test_registry.py  test_signals.py  test_storage_config.py  test_time.py  test_venue_clients.py
tests/fixtures/cf6/: sample_okx_sep2025.txt
wt/: __init__.py
