[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-trader"
version = "0.1.0"
description = "Daily weather forecast and multi-venue market signal pipeline"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "OpenAI Codex" }]
dependencies = [
  "herbie-data>=2025.0",
  "xarray>=2024.0",
  "cfgrib>=0.9.14",
  "eccodes>=2.36",
  "pandas>=2.2",
  "polars>=1.0",
  "duckdb>=1.1",
  "pyarrow>=17",
  "numpy>=1.26",
  "scikit-learn>=1.5",
  "xgboost>=2.1",
  "lightgbm>=4.5",
  "scipy>=1.13",
  "requests>=2.32",
  "httpx>=0.27",
  "tenacity>=9.0",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "psycopg[binary]>=3.2",
  "pymongo>=4.10",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "click>=8.1",
  "structlog>=24.4",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.6",
  "mypy>=1.11",
  "ipykernel>=6.29",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
