[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-trader"
version = "0.1.0"
description = "Daily weather forecast and multi-venue market signal pipeline"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "OpenAI Codex" }]
dependencies = [
  "click>=8.1",
  "httpx>=0.27",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "psycopg[binary]>=3.2",
  "pymongo>=4.10",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "requests>=2.32",
  "structlog>=24.4",
  "tenacity>=9.0",
  "tqdm>=4.66",
]

[project.optional-dependencies]
worker = [
  "cfgrib>=0.9.14",
  "duckdb>=1.1",
  "eccodes>=2.36",
  "herbie-data>=2025.0",
  "lightgbm>=4.5",
  "numpy>=1.26",
  "pandas>=2.2",
  "polars>=1.0",
  "pyarrow>=17",
  "scikit-learn>=1.5",
  "scipy>=1.13",
  "xarray>=2024.0",
  "xgboost>=2.1",
]

dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.6",
  "mypy>=1.11",
  "ipykernel>=6.29",
]

dashboard = [
  "streamlit>=1.40",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.vercel]
entrypoint = "api/app.py"
